--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,5 @@ services:
     ports: ["3000:3000"]
     volumes: ['./config.ru:/app/config.ru']
     environment:
-      REDIRECT1: 1.local==!https://www.google.com
-      REDIRECT2: 2.local==https://github.com
+      REDIRECT1: .*\.local==!https://www.google.com
+      REDIRECT2: .*\.lvh\.me==https://github.com
